[workspace]
members = ["packages/swc-plugin-workflow"]

resolver = "2"

[workspace.package]
version      = "0.1.0"
edition      = "2024"
publish      = false
authors      = ["Pranay Prakash <pranay@vercel.com>"]
license      = "MIT"
rust-version = "1.87"

[workspace.dependencies]
serde           = "1"
serde_json      = "1"
swc_core        = "26"
testing         = "14.0.1"


[profile.release]
codegen-units = 1
# debug = true
lto = true

# Optimize for size
opt-level = "s"

# Strip debug symbols
strip = "symbols"